# maoer-rs

./: Cargo.toml
cmd/: agent.rs
configs/: agent.toml
cores/: Cargo.toml
cores/src/: lib.rs
cores/src/error/: macros.rs  mod.rs
cores/src/monitor/: mod.rs  other.rs  unix.rs  windows.rs
kits/agent/: Cargo.toml
kits/agent/src/: config.rs  errors.rs  lib.rs
kits/agent/src/peer/: mod.rs
kits/agent/src/server/: cli.rs  context.rs  http.rs  mod.rs  socket.rs  websocket.rs
protocols/: Cargo.toml
protocols/src/: kits.rs  lib.rs
protocols/src/commands/: agent.rs
tools/: logo_text.MD  maoer_logo.psd
