[package]
name = "maoer-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
socket2 = { version = "0.4", features = ["all"] }
tokio-tungstenite = "*"
tungstenite="*"
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1.52"
bytes = "1"
dashmap = "5.0.0"
lazy_static = "1.4.0"
futures = "0.3"
pin-project="1.0.0"
clap = { version = "3.0.13", features = ["derive"] }
maoer-cores = { version = "0.1.0", path = "../../cores" }